--- a/SportStore/Views/_ViewImports.cshtml
+++ b/SportStore/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using SportStore.Models
+@using SportStore.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper Sportstore.Infrastructure.*, SportStore
