--- a/SportStore/Views/Product/List.cshtml
+++ b/SportStore/Views/Product/List.cshtml
@@ -1,6 +1,6 @@
-﻿@model ProductListViewModel
+﻿@model IEnumerable<Product>
 
-@foreach (var p in Model.Products)
+@foreach (var p in Model)
 {
     <div>
         <h3>@p.Name</h3>
@@ -8,4 +8,3 @@
         <h4>@p.Price.ToString("c")</h4>
     </div>
 }
-<div page-model="@Model.PagingInfo" page-action="List"></div>
