--- a/SportStore/Views/_ViewImports.cshtml
+++ b/SportStore/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using SportStore.Models
 @using SportStore.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper SportStore.Infrastructure.*, SportStore
+@addTagHelper Sportstore.Infrastructure.*, SportStore
