--- a/SportStore/Views/Cart/Index.cshtml
+++ b/SportStore/Views/Cart/Index.cshtml
@@ -18,7 +18,7 @@
             <td class="text-left">@line.Product.Name</td>
             <td class="text-right">@line.Product.Price.ToString("c")</td>
             <td class="text-right">@((line.Quantity * line.Product.Price).ToString("c"))</td>
-            <td>
+            <td class="bg-white border-0">
                 <form asp-action="RemoveFromCart" method="post">
                     <input type="hidden" name="ProductID" value="@line.Product.ProductID" />
                     <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
@@ -41,4 +41,5 @@
 </table> 
 <div class="text-center">
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue shopping</a>
+    <a class="btn btn-primary" asp-action="Checkout" asp-controller="Order">Checkout</a>
 </div>
