--- a/SportStore/Views/Cart/Index.cshtml
+++ b/SportStore/Views/Cart/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CartIndexViewModel
 
 <h2>Your cart</h2>
-<table class="table table-bordered table-striped">
+<table class="table table-responsive">
     <thead>
         <tr>
             <th>Quantity</th>
