--- a/SportStore/Views/Shared/_AdminLayout.cshtml
+++ b/SportStore/Views/Shared/_AdminLayout.cshtml
@@ -8,9 +8,11 @@
 </head>
 <body class="m-1 p-1">
     <div class="bg-info p-2">
-        <h4>
-            @ViewBag.Title
-        </h4>
+        <h4>@ViewBag.Title</h4>
+        @if (TempData["message"] != null)
+        {
+            <div class="alert alert-success">@TempData["message"]</div>
+        }
     </div>
     @RenderBody()
 </body>
